@@ -1,5 +1,11 @@
 2010-06-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
 
+	Renamed member variables
+	* src/SpeedCalc.cc
+	* src/SpeedCalc.h
+
+2010-06-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
+
 	Renamed member variables in SegmentMan
 	* src/RequestGroup.cc
 	* src/RequestGroupMan.cc
